--- a/esoternet_app/composer.json
+++ b/esoternet_app/composer.json
@@ -14,6 +14,7 @@
         "fakerphp/faker": "^1.24",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.0",
+        "stripe/stripe-php": "^16.4",
         "symfony/asset": "7.1.*",
         "symfony/asset-mapper": "7.1.*",
         "symfony/console": "7.1.*",
