--- a/esoternet_app/.env
+++ b/esoternet_app/.env
@@ -26,7 +26,7 @@ APP_SECRET=a2f53c199370cee655e4f3c689858385
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="postgresql://symfony:symfony@s127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+DATABASE_URL="postgresql://esoternet:esoternet@127.0.0.1:5432/symfony?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
