--- a/esoternet_app/config/packages/security.yaml
+++ b/esoternet_app/config/packages/security.yaml
@@ -5,25 +5,41 @@ security:
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         users_in_memory: { memory: null }
+        users_in_database:
+            entity:
+                class: App\Entity\User
+                property: email
+                
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: users_in_database
+            form_login:
+                login_path: page_login
+                check_path: page_login
+                enable_csrf: true
+            logout:
+                path: page_logout
+                target: page_login
+                enable_csrf: true
 
-            # activate different ways to authenticate
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
+    role_hierarchy:
+        ROLE_SUPER_ADMIN : ROLE_ADMIN
+        ROLE_CUSTOMER: ROLE_CUSTMER
+        ROLE_USER: []
+        ROLE_BANNED: [] 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: /, roles: PUBLIC_ACCESS }
+        - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/register, roles: PUBLIC_ACCESS }
+        - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/(?!login|register), roles: ROLE_USER}
 
 when@test:
     security:
