--- a/esoternet_app/dockerfile
+++ b/esoternet_app/dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update && apt-get install -y \
     git \
     curl \
     libpq-dev \
+    php-intl \
     && docker-php-ext-install pdo pdo_pgsql
 
 # Install Composer
