--- a/esoternet_app/config/services.yaml
+++ b/esoternet_app/config/services.yaml
@@ -8,6 +8,13 @@ parameters:
     stripe.public_key: '%env(STRIPE_PUBLIC_KEY)%'
 
 services:
+    Symfony\Component\Serializer\Normalizer\ObjectNormalizer:
+        arguments:
+            $defaultContext:
+                circular_reference_handler: '@App\Serializer\CircularReferenceHandler'
+
+    App\Serializer\SimpleDateTimeNormalizer:
+        tags: [ 'serializer.normalizer' ]
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
