--- a/esoternet_app/config/packages/security.yaml
+++ b/esoternet_app/config/packages/security.yaml
@@ -27,19 +27,18 @@ security:
                 enable_csrf: true
 
     role_hierarchy:
-        ROLE_SUPER_ADMIN : ROLE_ADMIN
-        ROLE_CUSTOMER: ROLE_CUSTMER
+        ROLE_SUPER_ADMIN : [ROLE_ADMIN]
+        ROLE_ADMIN: [ROLE_USER]
         ROLE_USER: []
         ROLE_BANNED: [] 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: /, roles: PUBLIC_ACCESS }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/register, roles: PUBLIC_ACCESS }
-        - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/(?!login|register), roles: ROLE_USER}
+        - { path: /, roles: PUBLIC_ACCESS }
 
 when@test:
     security:
