--- a/esoternet_app/config/routes.yaml
+++ b/esoternet_app/config/routes.yaml
@@ -3,3 +3,7 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+banned_page:
+    path: /banned
+    controller: App\Controller\BannedController::banned
