--- a/esoternet_app/composer.json
+++ b/esoternet_app/composer.json
@@ -15,6 +15,7 @@
         "dompdf/dompdf": "^3.1",
         "easycorp/easyadmin-bundle": "^4.20",
         "fakerphp/faker": "^1.24",
+        "knplabs/knp-snappy": "^1.5",
         "knplabs/knp-snappy-bundle": "^1.10",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.0",
